--- a/src/components/Main/SidePanel/SidePanel.css
+++ b/src/components/Main/SidePanel/SidePanel.css
@@ -16,6 +16,9 @@
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   color: #eee;
-  flex: 0.7;
-  overflow: auto;
+  flex: 1;
+  overflow: hidden;
+}
+.SidePanel:hover {
+  overflow-y: auto;
 }
